--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# If you prefer the allow list template instead of the deny list, see community template:
-# https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
-#
+# GO:
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+*.run
 
 # Test binary, built with `go test -c`
 *.test
@@ -19,3 +19,6 @@
 
 # Go workspace file
 go.work
+
+# Go versions freeze file
+go.sum
