--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -2,11 +2,11 @@ FROM golang:1.19-alpine3.17
 
 RUN apk add --no-cache iptables tcpdump
 
-WORKDIR /go/src/app
+WORKDIR /go/whirlpool
 COPY sources ./
 COPY go.* ./
 
 RUN go get -d -v ./...
-RUN go build -o app.run
+RUN go build -o whirlpool.run
 
 ENTRYPOINT ["/bin/sh", "-c"]
