--- a/.gitignore
+++ b/.gitignore
@@ -3,24 +3,16 @@
 .idea
 .vscode
 
+# Python:
+
+# Python cache
+__pycache__
+
 # GO:
 
 # Binaries for programs and plugins
 *.exe
-*.exe~
-*.dll
-*.so
-*.dylib
 *.run
-
-# Test binary, built with `go test -c`
-*.test
-
-# Output of the go coverage tool, specifically when used with LiteIDE
-*.out
-
-# Dependency directories (remove the comment below to include it)
-# vendor/
 
 # Go workspace file
 go.work
