--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -13,7 +13,7 @@ services:
 
   vpnclient:
     privileged: true
-    command: ["(python3 main.py -i 83.0.0.87 &) && (tcpdump -n ip &) && sleep 3 && ping -c 3 -v -s 56 8.8.8.8 && ping -c 3 -v -s 2048 8.8.8.8"]
+    command: ["(python3 main.py -i 83.0.0.87 &) && (tcpdump -n ip &) && sleep 3 && ping -c 3 -W 10 -s 56 8.8.8.8 && ping -c 3 -W 10 -s 2048 8.8.8.8"]
     build:
       context: ../viridian/algae
       dockerfile: Dockerfile
