docker and make updated, gh actions added

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -1,7 +1,6 @@
 FROM golang:1.19-alpine3.17
 
-# TODO: remove tcpdump
-RUN apk add --no-cache iptables tcpdump
+RUN apk add --no-cache iptables
 
 WORKDIR /seaside/whirlpool
 COPY sources ./
@@ -10,4 +9,10 @@ COPY go.* ./
 RUN go get -d -v ./...
 RUN go build -o whirlpool.run
 
-ENTRYPOINT ["/bin/sh", "-c"]
+ENV ADDRESS 83.0.0.87
+ENV IN_PORT 1723
+ENV OUT_PORT 1724
+ENV CTRL_PORT 1725
+
+EXPOSE $IN_PORT
+ENTRYPOINT ./whirlpool.run -a $ADDRESS -i $IN_PORT -o $OUT_PORT -c $CTRL_PORT
