--- a/viridian/algae/Makefile
+++ b/viridian/algae/Makefile
@@ -1,7 +1,24 @@
+EXECUTABLE_NAME = executable
+
+PATH := venv/bin:$(PATH)
+
+venv:
+	python3 -m venv venv
+	pip install --upgrade pip
+	pip install pyinstaller
+
+build: venv
+	pyinstaller -F -c -y -n $(EXECUTABLE_NAME) sources/main.py
+.PHONY: build
+
 run:
-	sudo python3 sources/main.py
+	python3 sources/main.py
 .PHONY: run
 
 clean:
-	rm -rf __pycache__
+	rm -rf sources/__pycache__
+	rm -rf venv
+	rm -rf build
+	rm -rf dist
+	rm -f *.spec
 .PHONY: clean
