--- a/viridian/algae/Dockerfile
+++ b/viridian/algae/Dockerfile
@@ -1,10 +1,11 @@
-FROM python:3.11.3-alpine3.17 as builder
+FROM python:3.11-alpine3.17 as builder
 
+ARG WORKROOT /seaside/algae
 RUN apk add --no-cache make binutils
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
-WORKDIR /seaside/algae
+WORKDIR $WORKROOT
 
 COPY sources/*.py ./sources/
 COPY Makefile ./
@@ -13,20 +14,21 @@ ENV EXECUTABLE algae.run
 RUN make build EXECUTABLE_NAME=$EXECUTABLE
 
 
-FROM alpine:3.17.3 as runner
+FROM alpine:3.17 as runner
 
-WORKDIR /seaside/algae
-COPY --from=builder /seaside/algae/dist/* ./
+ARG WORKROOT /seaside/algae
+WORKDIR $WORKROOT
+COPY --from=builder $WORKROOT/dist/* ./
 
 ENV EXECUTABLE algae.run
-ENV COMMAND exit
+ENV COMMAND true
 
 ENV TUNNEL seatun
 ENV CONN_MTU 1300
 ENV CONN_BUFF 2000
 ENV ADDRESS 127.0.0.1
-ENV IN_PORT 1723
-ENV OUT_PORT 1724
+ENV IN_PORT 1724
+ENV OUT_PORT 1723
 
 EXPOSE 1724
 ENTRYPOINT (./$EXECUTABLE -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -i $IN_PORT -o $OUT_PORT &) && sh -c "$COMMAND"
