--- a/viridian/algae/Dockerfile
+++ b/viridian/algae/Dockerfile
@@ -1,26 +1,22 @@
 FROM python:3.11-alpine3.17 as builder
 
-ARG WORKROOT=/seaside/algae
 RUN apk add --no-cache make binutils
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
-WORKDIR $WORKROOT
+WORKDIR /seaside/algae
 
 COPY sources/*.py ./sources/
 COPY Makefile ./
 
-ENV EXECUTABLE algae.run
-RUN make build EXECUTABLE_NAME=$EXECUTABLE
+RUN make build EXECUTABLE_NAME=algae.run
 
 
-FROM alpine:3.17 as runner
+FROM alpine:3.17 as default
 
-ARG WORKROOT=/seaside/algae
-WORKDIR $WORKROOT
-COPY --from=builder $WORKROOT/dist/* ./
+WORKDIR /seaside/algae
+COPY --from=builder /seaside/algae/dist/algae.run ./
 
-ENV EXECUTABLE algae.run
 ENV COMMAND true
 
 ENV TUNNEL seatun
@@ -30,5 +26,5 @@ ENV ADDRESS 127.0.0.1
 ENV IN_PORT 1724
 ENV OUT_PORT 1723
 
-EXPOSE 1724
-ENTRYPOINT (./$EXECUTABLE -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -i $IN_PORT -o $OUT_PORT &) && sh -c "$COMMAND"
+EXPOSE $IN_PORT
+ENTRYPOINT (./algae.run -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -i $IN_PORT -o $OUT_PORT &) && sh -c "$COMMAND"
