--- a/turquoise/tests.yml
+++ b/turquoise/tests.yml
@@ -3,11 +3,13 @@ version: '3.1'
 services:
   vpnserver:
     privileged: true
+    image: ghcr.io/pseusys/seasidevpn/caerulean-whirlpool
     build:
       context: ../caerulean/whirlpool
       dockerfile: Dockerfile
     environment:
       ADDRESS: 10.0.0.87
+      LOG_LEVEL: DEBUG
     networks:
       default:
         ipv4_address: 10.0.0.87
@@ -19,7 +21,13 @@ services:
       dockerfile: Dockerfile
     environment:
       ADDRESS: 10.0.0.87
-      COMMAND: sleep 3 && (test -n "$CI" || ping -c 8 -s 64 8.8.8.8) && (nc -v tcpbin.com 4242)
+      LOG_LEVEL: DEBUG
+      COMMAND: |
+        sleep 3 && \
+        echo "Testing for PING porotocol" && \
+        (test -n "$CI" || ping -c 8 -s 64 8.8.8.8) && \
+        echo "Testing with QOTD (UDP) protocol" && \
+        echo ":)" | nc -u -w 3 djxmmx.net 17
     networks:
       default:
         ipv4_address: 10.0.0.65
