go interface identification added

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -21,9 +21,10 @@ COPY --from=builder /seaside/algae/whirlpool.run ./
 ENV LOG_LEVEL WARNING
 
 ENV ADDRESS 127.0.0.1
+ENV EXTERNAL 127.0.0.1
 ENV IN_PORT 1723
 ENV OUT_PORT 1724
 ENV CTRL_PORT 1725
 
 EXPOSE $IN_PORT
-ENTRYPOINT ./whirlpool.run -a $ADDRESS -i $IN_PORT -o $OUT_PORT -c $CTRL_PORT
+ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -i $IN_PORT -o $OUT_PORT -c $CTRL_PORT
