input variables fixed

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -20,8 +20,8 @@ COPY --from=builder /seaside/algae/whirlpool.run ./
 
 ENV LOG_LEVEL WARNING
 
-ENV ADDRESS 127.0.0.1
-ENV EXTERNAL 127.0.0.1
+ENV ADDRESS none
+ENV EXTERNAL none
 ENV IN_PORT 1723
 ENV OUT_PORT 1724
 ENV CTRL_PORT 1725
