description message added to test.yml

--- a/turquoise/tests.yml
+++ b/turquoise/tests.yml
@@ -26,7 +26,7 @@ services:
       LOG_LEVEL: DEBUG
       COMMAND: |
         sleep 3 && \
-        echo "Testing for PING porotocol" && \
+        echo "Testing for PING porotocol (if not in CI env only)" && \
         (test -n "$CI" || ping -c 8 -s 64 8.8.8.8) && \
         echo "Testing with QOTD (UDP) protocol" && \
         echo ":)" | nc -u -w 3 djxmmx.net 17
