ctrl port added

--- a/viridian/algae/Dockerfile
+++ b/viridian/algae/Dockerfile
@@ -21,11 +21,12 @@ ENV COMMAND true
 ENV LOG_LEVEL DEBUG
 
 ENV TUNNEL seatun
-ENV CONN_MTU 1300
+ENV CONN_MTU 1500
 ENV CONN_BUFF 2000
 ENV ADDRESS 127.0.0.1
 ENV IN_PORT 1724
 ENV OUT_PORT 1723
+ENV CTRL_PORT 1725
 
 EXPOSE $IN_PORT
 ENTRYPOINT (./algae.run -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -i $IN_PORT -o $OUT_PORT &) && sh -c "$COMMAND"
