--- a/viridian/algae/Dockerfile
+++ b/viridian/algae/Dockerfile
@@ -1,25 +1,18 @@
-FROM python:3.11-alpine3.17 as builder
-
-RUN apk add --no-cache make binutils
+FROM python:3.11-alpine3.17 as default
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 WORKDIR /seaside/algae
 
-COPY sources/*.py ./sources/
-COPY Makefile ./
+COPY requirements.txt ./
+RUN pip install -r requirements.txt
 
-RUN make build EXECUTABLE_NAME=algae.run
-
-
-FROM alpine:3.17 as default
-
-WORKDIR /seaside/algae
-COPY --from=builder /seaside/algae/dist/algae.run ./
+COPY sources/*.py ./
 
 ENV COMMAND true
 ENV LOG_LEVEL DEBUG
 
+ENV VPN True
 ENV TUNNEL seatun
 ENV CONN_MTU 1500
 ENV CONN_BUFF 2000
@@ -29,4 +22,4 @@ ENV OUT_PORT 1723
 ENV CTRL_PORT 1725
 
 EXPOSE $IN_PORT
-ENTRYPOINT (./algae.run -t $TUNNEL -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -i $IN_PORT -o $OUT_PORT &) && sh -c "$COMMAND"
+ENTRYPOINT (python3 main.py -t $TUNNEL -e $VPN -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -i $IN_PORT -o $OUT_PORT &) && sh -c "$COMMAND"
