--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -19,14 +19,16 @@ WORKDIR /seaside/algae
 COPY --from=builder /seaside/algae/whirlpool.run ./
 
 ENV LOG_LEVEL WARNING
+ENV MAX_USERS 16
 
 ENV ADDRESS none
 ENV EXTERNAL none
 ENV IN_PORT 1723
 ENV OUT_PORT 1724
 ENV CTRL_PORT 1725
+ENV USER_TTL 300
 
 EXPOSE $IN_PORT
-ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -i $IN_PORT -o $OUT_PORT -c $CTRL_PORT
+ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -i $IN_PORT -o $OUT_PORT -c $CTRL_PORT -t $USER_TTL -u $MAX_USERS
 
 # TODO: open for PINGs and control ports, test: tcpdump -n -i eth0 ip
