--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -26,12 +26,12 @@ flake8 = { version = "^3.9.2", optional = true }
 black = { version = "^20.8b1", optional = true }
 isort = { version = "^5.11.0", optional = true }
 pytest = { version = "^7.3.1", optional = true }
+docker = { version = "^6.1.2", optional = true }
 pyinstaller = { version = "^5.11.0", optional = true }
-pytest-asyncio = { version = "^0.14.0", optional = true }
 
 [tool.poetry.extras]
 build = ["pyinstaller"]
-test = ["pytest", "pytest-asyncio"]
+test = ["pytest", "docker"]
 devel = ["flake8", "black", "isort"]
 
 
