control message encryption removed, default added

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -29,6 +29,7 @@ ENV CTRL_PORT 1725
 ENV USER_TTL 300
 
 EXPOSE $IN_PORT
+EXPOSE $CTRL_PORT
 ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -i $IN_PORT -o $OUT_PORT -c $CTRL_PORT -t $USER_TTL -u $MAX_USERS
 
 # TODO: open for PINGs and control ports, test: tcpdump -n -i eth0 ip
