port numbers fixed

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -23,13 +23,12 @@ ENV MAX_USERS 16
 
 ENV ADDRESS none
 ENV EXTERNAL none
-ENV IN_PORT 1723
-ENV OUT_PORT 1724
-ENV CTRL_PORT 1725
+ENV SEA_PORT 8542
+ENV CTRL_PORT 8543
 ENV USER_TTL 300
 
-EXPOSE $IN_PORT/udp
+EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -i $IN_PORT -o $OUT_PORT -c $CTRL_PORT -t $USER_TTL -u $MAX_USERS
+ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -p $SEA_PORT -c $CTRL_PORT -t $USER_TTL -u $MAX_USERS
 
-# TODO: open for PINGs and control ports, test: tcpdump -n -i eth0 ip
+# Test: tcpdump -n -i eth0 ip
