--- a/viridian/algae/Dockerfile
+++ b/viridian/algae/Dockerfile
@@ -24,10 +24,9 @@ ENV TUNNEL seatun
 ENV CONN_MTU 1500
 ENV CONN_BUFF 2000
 ENV ADDRESS 127.0.0.1
-ENV IN_PORT 1724
-ENV OUT_PORT 1723
-ENV CTRL_PORT 1725
+ENV SEA_PORT 8542
+ENV CTRL_PORT 8543
 
-EXPOSE $IN_PORT/udp
+EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT poetry run execute -t $TUNNEL -e $VPN -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -i $IN_PORT -o $OUT_PORT
+ENTRYPOINT poetry run execute -t $TUNNEL -e $VPN -m $CONN_MTU -b $CONN_BUFF -a $ADDRESS -p $SEA_PORT
