--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,5 +16,13 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v3
 
+      - name: Setup Python 3.10 🐍
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
+
+      - name: Install Dependencies 🔮
+        run: pip3 install poetry
+
       - name: Test Caerulean Whirlpool 🧪
         run: make test-caerulean-whirlpool
