--- a/viridian/algae/pyproject.toml
+++ b/viridian/algae/pyproject.toml
@@ -23,6 +23,7 @@ python = ">=3.7,<3.12"
 colorama = "^0.4.6"
 pyroute2 = "^0.7.9"
 pycryptodome = "^3.18.0"
+mypy = { version = "^1.3.0", optional = true }
 flake8 = { version = "^3.9.2", optional = true }
 black = { version = "^20.8b1", optional = true }
 isort = { version = "^5.11.0", optional = true }
@@ -34,7 +35,7 @@ pyinstaller = { version = "^5.11.0", optional = true }
 [tool.poetry.extras]
 build = ["pyinstaller"]
 test = ["pytest", "docker", "icmplib"]
-devel = ["flake8", "black", "isort"]
+devel = ["flake8", "black", "isort", "mypy"]
 
 
 
