--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,7 +22,7 @@ jobs:
           go-version: "^1.20.4"
 
       - name: Install Dependencies 🔮
-        run: go get -u golang.org/x/lint/golint
+        run: go install golang.org/x/lint/golint
 
       - name: Lint Caerulean Whirlpool 🧪
         run: make lint-whirlpool
