whirlpool network api added

--- a/caerulean/whirlpool/Dockerfile
+++ b/caerulean/whirlpool/Dockerfile
@@ -23,10 +23,12 @@ ENV MAX_USERS 16
 
 ENV ADDRESS none
 ENV EXTERNAL none
+ENV SURFACE none
 ENV SEA_PORT 8542
 ENV CTRL_PORT 8543
+ENV NET_PORT 8587
 ENV USER_TTL 300
 
 EXPOSE $SEA_PORT/udp
 EXPOSE $CTRL_PORT/tcp
-ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -p $SEA_PORT -c $CTRL_PORT -t $USER_TTL -u $MAX_USERS
+ENTRYPOINT ./whirlpool.run -a $ADDRESS -e $EXTERNAL -s $SURFACE -p $SEA_PORT -c $CTRL_PORT -t $USER_TTL -u $MAX_USERS
